set(ZT_OPTS_SRCS zt_opts.c)
set(ZT_OPTS_HDRS zt_opts.h)

add_library(zt_opts ${ZT_OPTS_SRCS} ${ZT_OPTS_HDRS})

set(OPTS_INSTALL_HEADERS zt_opts.h)
set(OPTS_INSTALL_TARGETS zt_opts)

if (WIN32)
    if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
        set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/install" CACHE PATH "Windows install prefix" FORCE)
    endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/x64)
    endif()
endif(WIN32)

install(TARGETS ${OPTS_INSTALL_TARGETS}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib)

install(FILES ${OPTS_INSTALL_HEADERS} DESTINATION include)
